@@ -1,3 +1,6 @@
+2024-01-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Fix debug logging for returned attributes
+
 2023-11-17 Mingjie Shen <shen497@purdue.edu>
 	* Fix condition for error message of failing to open gzipped files
 
